--- a/modules/app/src/main/res/layouts/activities/courseEntityActivity/layout/course_entity_activity_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/courseEntityActivity/layout/course_entity_activity_layout.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".activities.implementations.courseEntity.CourseEntityActivity">
 
     <data>
 
@@ -8,7 +11,7 @@
             type="com.lonn.studentassistant.viewModels.entities.CourseViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/solid_background"
@@ -89,8 +92,8 @@
                     android:id="@+id/professorsBaseCategory"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:category_title="Professors"
-                    app:view_type="PARTIAL">
+                    android:categoryTitle="@{`Professors`}"
+                    android:viewType="@{`PARTIAL`}">
 
                 </com.lonn.studentassistant.views.implementations.categories.professorCategories.ProfessorBaseCategory>
 
@@ -98,9 +101,8 @@
                     android:id="@+id/scheduleBaseCategory"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:category_title="Schedule"
-                    app:subcategories_to_generate="days"
-                    app:view_type="PARTIAL" />
+                    android:categoryTitle="@{`Schedule`}"
+                    android:viewType="@{`PARTIAL`}" />
 
             </LinearLayout>
         </ScrollView>
