--- a/modules/app/src/main/res/layouts/activities/professorEntityActivity/layout/professor_entity_activity_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/professorEntityActivity/layout/professor_entity_activity_layout.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".activities.implementations.professorEntity.ProfessorEntityActivity">
 
     <data>
 
@@ -8,7 +11,7 @@
             type="com.lonn.studentassistant.viewModels.entities.ProfessorViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/solid_background"
@@ -105,7 +108,7 @@
                     android:id="@+id/coursesBaseCategory"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:category_title="Courses">
+                    android:categoryTitle="@{`Courses`}">
 
                 </com.lonn.studentassistant.views.implementations.categories.courseCategories.CourseBaseCategory>
 
@@ -113,16 +116,15 @@
                     android:id="@+id/otherActivitiesBaseCategory"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:category_title="Other activities"
-                    app:view_type="PARTIAL" />
+                    android:categoryTitle="@{`Other activities`}"
+                    android:viewType="@{`PARTIAL`}" />
 
                 <com.lonn.studentassistant.views.implementations.categories.scheduleCategories.ScheduleBaseCategory
                     android:id="@+id/scheduleBaseCategory"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:category_title="Schedule"
-                    app:subcategories_to_generate="days"
-                    app:view_type="PARTIAL" />
+                    android:categoryTitle="@{`Schedule`}"
+                    android:viewType="@{`PARTIAL`}" />
 
             </LinearLayout>
         </ScrollView>
