--- a/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_content_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_content_layout.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:bind="http://schemas.android.com/apk/res-auto">
+<layout>
 
     <data>
 
         <import type="com.lonn.studentassistant.firebaselayer.entities.Course" />
+
+        <import type="com.lonn.studentassistant.firebaselayer.entities.Professor" />
 
         <variable
             name="student"
             type="com.lonn.studentassistant.viewModels.entities.StudentViewModel" />
 
         <variable
-            name="allCourses"
+            name="courses"
             type="java.util.List&lt;Course&gt;" />
+
+        <variable
+            name="professors"
+            type="java.util.List&lt;Professor&gt;" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -66,7 +72,8 @@
             layout="@layout/student_activity_professors_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="invisible" />
+            android:visibility="invisible"
+            app:professors="@{professors}" />
 
         <include
             android:id="@+id/layoutCourses"
@@ -74,7 +81,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="invisible"
-            app:courses="@{allCourses}" />
+            app:courses="@{courses}" />
 
         <include
             android:id="@+id/layoutAdministrative"
