Added schedule, fixed schedule html parser duplicating courses

--- a/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_professors_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_professors_layout.xml
@@ -8,7 +8,7 @@
 
         <import type="com.lonn.studentassistant.viewModels.entities.ProfessorViewModel" />
 
-        <import type="com.lonn.studentassistant.viewModels.entities.EntityViewModel" />
+        <import type="com.lonn.studentassistant.viewModels.entities.abstractions.EntityViewModel" />
 
         <import type="com.lonn.studentassistant.firebaselayer.entities.Professor" />
 
