--- a/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_content_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_content_layout.xml
@@ -7,11 +7,7 @@
 
         <import type="com.lonn.studentassistant.viewModels.entities.ProfessorViewModel" />
 
-        <import type="com.lonn.studentassistant.viewModels.entities.EntityViewModel" />
-
-        <import type="com.lonn.studentassistant.firebaselayer.entities.Professor" />
-
-        <import type="com.lonn.studentassistant.firebaselayer.entities.Course" />
+        <import type="com.lonn.studentassistant.viewModels.entities.abstractions.EntityViewModel" />
 
         <variable
             name="student"
@@ -24,6 +20,18 @@
         <variable
             name="professors"
             type="java.util.List&lt;ProfessorViewModel&gt;" />
+
+        <import type="com.lonn.studentassistant.viewModels.entities.OneTimeClassViewModel" />
+
+        <import type="com.lonn.studentassistant.viewModels.entities.RecurringClassViewModel" />
+
+        <variable
+            name="oneTimeClasses"
+            type="java.util.List&lt;OneTimeClassViewModel&gt;" />
+
+        <variable
+            name="recurringClasses"
+            type="java.util.List&lt;RecurringClassViewModel&gt;" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -57,7 +65,9 @@
             layout="@layout/student_activity_schedule_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="invisible" />
+            android:visibility="invisible"
+            app:oneTimeClasses="@{oneTimeClasses}"
+            app:recurringClasses="@{recurringClasses}" />
 
         <include
             android:id="@+id/layoutGrades"
