--- a/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_courses_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_courses_layout.xml
@@ -12,7 +12,7 @@
 
         <import type="com.lonn.studentassistant.viewModels.CategoryViewModel" />
 
-        <import type="com.lonn.studentassistant.viewModels.entities.EntityViewModel" />
+        <import type="com.lonn.studentassistant.viewModels.entities.abstractions.EntityViewModel" />
 
         <import type="com.lonn.studentassistant.firebaselayer.entities.Course" />
 
